--- a/Complete-Frotend-Website/style.css
+++ b/Complete-Frotend-Website/style.css
@@ -77,7 +77,7 @@ li {
     right: 0%;
     opacity: .3;
     z-index: -1;
-    background: linear-gradient(to top right, #dc889c 0%, #0000FF 8%, #f5a7be 80%);
+    background: linear-gradient(to top right, #f0acbc 0%, #0000FF 8%, #d49dae 80%);
 }
 
 .navbar:before {
