--- a/Complete-Frotend-Website/style.css
+++ b/Complete-Frotend-Website/style.css
@@ -61,7 +61,7 @@ li {
 .header {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(170, 127, 158, 0.1), rgba(152, 41, 41, 0.4)), url("./img/webBg4.jpg");
+    background-image:  url("./img/webBg4.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     clip-path: polygon(100% 0%, 100% 75%, 50% 100%, 0 75%, 0 0);
